SERVER-14078 adapt isSelf to work with multiple local interfaces